<resources>
    <string name="app_name">Cardex</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgotpass">Forgot password?</string>
    <string name="newmember">Do not have an account?</string>
    <string name="login">Login</string>
    <string name="signup">Create new account</string>
    <string name="username2">Username</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="birthday">Birthday:</string>
    <string name="register">REGISTER</string>
    <string name="phone">Phone</string>
    <string name="forgotpassword">Forgot password</string>
    <string name="findacc">Please enter your email to search for your account.</string>
    <string name="sendEmail">Send Email</string>
    <string name="home">Home</string>
    <string name="new_card">Add new card</string>
    <string name="profile">Profile</string>
    <string name="logout">Log out</string>
    <string name="your_cards">Your cards in one app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="vouchers">Vouchers</string>
    <string name="rate_app">Rate this app</string>
    <string name="card_number">Card Number</string>
    <string name="store_name">Store Name</string>
    <string name="add_new_card">Add new card</string>
    <string name="new_card_title">New Card</string>
    <string name="add_card_tv">Please add the card number and the name of the store from your card</string>
    <string name="store_name_title">Sephora</string>
    <string name="send_feedback">Send feedback</string>
    <string name="feedback_title">Do you enjoy our app?</string>
    <string name="feedback_string">Let us know how much you love our app</string>
    <string name="recommend_string">Would you recommend this app to your friends?</string>
    <string name="yes_string">Yes</string>
    <string name="no_string">No</string>
    <string name="sephora_number">54545454</string>
    <string name="category">Category</string>
    <string name="profile_title">Profile</string>
    <string name="editProfile">Edit Profile</string>
    <string name="DeleteAccount">Delete Account</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="EditedBirthday">Birthday</string>
    <string name="updateAccount">Update Account</string>
    <string name="cancel">Cancel</string>
    <string name="editcard">Edit Card</string>
    <string name="deleteCard">Delete Card</string>
    <string name="updateCard">Update Card</string>
    <string name="registerTitle">Register</string>
    <string name="your_vouchers">Your Vouchers</string>
    <string name="discount">10% Discount</string>
    <string name="discountBirthday">Here is your 10% birthday discount for your next purchase</string>
    <string name="no_vouchers">You have no vouchers</string>
    <string name="filterByCategory">Filter :</string>
    <string name="happyBirthday">Happy Birthday!</string>
    <string name="statistics">Statistics</string>
    <string name="seeStatistics">Do you want to take a look at our statistics?</string>
    <string name="pressForStatistics">You can press on the following button to see out charts based on your feedback!</string>
    <string name="contributeWithFeedback">Do you want to contribute to the charts? Press the following button and rate our app!</string>
    <string name="showPieChart">Show Charts</string>
    <string name="no_cards">You have no cards!</string>
</resources>