<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>

        <item
            android:id="@+id/new_card"
            android:title="@string/new_card"
            android:icon="@drawable/ic_add_card"/>
        <item
            android:id="@+id/vouchers"
            android:title="@string/vouchers"
            android:icon="@drawable/ic_voucher_card"/>
        <item
            android:id="@+id/rate_app"
            android:title="@string/rate_app"
            android:icon="@drawable/ic_rate"/>
        <item
        android:id="@+id/statistics"
        android:title="@string/statistics"
        android:icon="@drawable/ic_baseline_bar_chart_24"/>

    </group>


    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/profile"
                    android:title="@string/profile"
                    android:icon="@drawable/ic_profile"/>
                <item
                    android:id="@+id/log_out"
                    android:title="@string/logout"
                    android:icon="@drawable/ic_logout"/>
            </group>

        </menu>

    </item>


</menu>