<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".registerActivity"
    android:background="@drawable/activities_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/registerTitle"
                android:paddingTop="30dp"
                android:textSize="35sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/lightTextColor">
            </TextView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:paddingTop="30dp">

                <EditText
                    android:id="@+id/idUsername"
                    android:layout_width="270dp"
                    android:layout_height="48dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:hint="@string/username2"
                    android:inputType="textPersonName"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/darkTextColor"
                    android:textColorHint="@color/hintColor"/>

                <EditText
                    android:id="@+id/idPassword"
                    android:layout_width="270dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="15dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/darkTextColor"
                    android:textColorHint="@color/hintColor"/>

                <EditText
                    android:id="@+id/idName"
                    android:layout_width="270dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="15dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/darkTextColor"
                    android:textColorHint="@color/hintColor"/>

                <EditText
                    android:id="@+id/idSurname"
                    android:layout_width="270dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="15dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:hint="@string/surname"
                    android:inputType="textPersonName"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/darkTextColor"
                    android:textColorHint="@color/hintColor"/>

                <EditText
                    android:id="@+id/idPhone"
                    android:layout_width="270dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="15dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/darkTextColor"
                    android:textColorHint="@color/hintColor"/>

                <EditText
                    android:id="@+id/idEmail"
                    android:layout_width="270dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="15dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/darkTextColor"
                    android:textColorHint="@color/hintColor"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/lightTextColor"
                    android:fontFamily="@font/poppins_semibold">
                </TextView>
                <DatePicker
                    android:id="@+id/datepicker"
                    android:layout_width="230dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:textColor="@color/lightTextColor"
                    android:calendarTextColor="@color/lightTextColor"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:layout_gravity="center">
                <Button
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:background="@color/btnColor"
                    android:text="@string/register"
                    android:textColor="@color/lightTextColor"
                    android:id="@+id/register"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:onClick="register">
                </Button>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/logo_cardex">
                </ImageView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>